more scss styles added

--- a/css/main.scss
+++ b/css/main.scss
@@ -4,6 +4,17 @@
 @import 'styles';
 @import 'typography';
 
-body{
-	background-color: $accent-colour-faded;
+
+
+
+
+
+/*
+.my-test {
+  @include my-size(10px);
 }
+
+.my-test {
+  @include border-radius-single(10px);
+}
+*/
