--- a/css/helpers.scss
+++ b/css/helpers.scss
@@ -1,3 +1,10 @@
+$phone: 768px;
+$tablet: 992px;
+$desktop: 1200px;
+// @media screen and (min-width: $phone) {}
+// @media screen and (max-width: $tablet) {}
+
+
 .center-text {
 	text-align: center;
 }
@@ -42,7 +49,7 @@
 	display: block;
 }
 
-.full-size{
+@mixin full-size{
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -72,3 +79,42 @@ clear: both;
 .show {
 	opacity: 1;
 }
+
+@mixin size($width, $height) {
+  width: $width;
+  height: $height;
+}
+
+@mixin border-radius-single($radius) {
+  border-radius: $radius;
+  -moz-border-radius: $radius;
+	-webkit-border-radius: $radius;
+}
+
+.basic-transition {
+	transition: all 0.2s ease-in-out;
+}
+
+@mixin var-transition($time) {
+	transition: all $time ease-in-out;
+}
+
+@mixin translate3d($x, $y, $z) {
+	transform: translateX($x);
+	transform: translateY($y);
+	transform: translateZ($z);
+}
+
+.dark-overlay {
+	content: "";
+	z-index: 0;
+	@include full-size;
+	background: none repeat 0 0 rgba(30, 30, 30, 0.5);
+}
+/*
+@mixin my-size($width, $height) {
+  width: $width;
+  width: $height;
+}
+
+*/
