--- a/css/main.css
+++ b/css/main.css
@@ -85,13 +85,6 @@ a img {
 .block {
   display: block; }
 
-.full-size {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%; }
-
 .list-style.none {
   list-style-type: none; }
 
@@ -110,7 +103,55 @@ clear: both;
 .show {
   opacity: 1; }
 
+.basic-transition {
+  transition: all 0.2s ease-in-out; }
+
+.dark-overlay {
+  content: "";
+  z-index: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: none repeat 0 0 rgba(30, 30, 30, 0.5); }
+
+/*
+@mixin my-size($width, $height) {
+  width: $width;
+  width: $height;
+}
+
+*/
 body {
-  background-color: rgba(69, 182, 175, 0.7); }
+  font-size: 13px;
+  font-family: "Open Sans", sans-serif;
+  color: #888; }
+
+p {
+  margin: 0 0 15px 0;
+  line-height: 24px; }
+
+h2 {
+  font-size: 24px;
+  margin: 0 0 12px 0;
+  color: #434343;
+  font-weight: 400; }
+
+h3 {
+  font-size: 18px;
+  margin: 0 0 18px 0;
+  color: #434343;
+  font-weight: 400; }
+
+/*
+.my-test {
+  @include my-size(10px);
+}
+
+.my-test {
+  @include border-radius-single(10px);
+}
+*/
 
 /*# sourceMappingURL=main.css.map */
