--- a/css/styles.scss
+++ b/css/styles.scss
@@ -124,6 +124,11 @@ header {
 	float: left;
 	position: relative;
 	z-index: 2;
+	top: 8px;
+}
+
+.nav-logo img {
+	max-width: 70%;
 }
 
 .main-menu-content {
@@ -173,4 +178,8 @@ a:hover {
 	@media screen and (min-width: $phone) {
 		display: none;
 	};
+}
+
+#mobile-menu div ul li{
+float: none;
 }
