--- a/css/helpers.scss
+++ b/css/helpers.scss
@@ -105,7 +105,7 @@ clear: both;
 	transform: translateZ($z);
 }
 
-.dark-overlay {
+@mixin dark-overlay {
 	content: "";
 	z-index: 0;
 	@include full-size;
