--- a/css/main.css
+++ b/css/main.css
@@ -106,16 +106,6 @@ clear: both;
 .show {
   opacity: 1; }
 
-.dark-overlay {
-  content: "";
-  z-index: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: none repeat 0 0 rgba(30, 30, 30, 0.5); }
-
 /*
 @mixin my-size($width, $height) {
   width: $width;
@@ -296,9 +286,8 @@ a {
   padding: 20px 14px;
   line-height: 20px;
   transition: all 0.5s ease-in-out; }
-
-a:hover {
-  color: #45B6AF; }
+  a:hover {
+    color: #45B6AF; }
 
 #main-menu {
   display: none; }
@@ -316,6 +305,22 @@ a:hover {
 
 #mobile-menu div ul li {
   float: none; }
+
+.bxslider .main-slide-1 {
+  background-image: url("../img/slider_1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 0 0; }
+.bxslider .main-slide-2 {
+  background-image: url("../img/slider_2.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 0 0; }
+.bxslider .main-slide-3 {
+  background-image: url("../img/slider_3.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 0 0; }
 
 body {
   font-size: 13px;
