main slider styled

--- a/css/main.css
+++ b/css/main.css
@@ -219,6 +219,9 @@ clear: both;
       margin: 0 1.31579%;
       background-color: blue; } }
 
+body {
+  padding-top: 50px; }
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -243,7 +246,7 @@ h1, h2, h3 {
   line-height: 1.1; }
 
 header {
-  z-index: 1000;
+  z-index: 10000;
   position: fixed;
   top: 0;
   left: 0;
@@ -259,7 +262,8 @@ header {
   float: left;
   position: relative;
   z-index: 2;
-  top: 8px; }
+  top: 8px;
+  left: -20px; }
 
 .nav-logo img {
   max-width: 70%; }
@@ -321,6 +325,48 @@ a {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 0 0; }
+
+.main-slider-content {
+  padding: 10% 2% 5% 2%;
+  color: #D4D4D4;
+  position: relative;
+  z-index: 1; }
+  .main-slider-content img {
+    top: 5%;
+    position: absolute; }
+    @media screen and (min-width: 992px) {
+      .main-slider-content img {
+        right: 5%; } }
+  .main-slider-content h1 {
+    margin-top: 250px;
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: 400; }
+    @media screen and (min-width: 768px) {
+      .main-slider-content h1 {
+        color: red;
+        margin-top: 280px;
+        font-size: 30px; } }
+    @media screen and (min-width: 992px) {
+      .main-slider-content h1 {
+        font-size: 40px;
+        line-height: 60px;
+        color: green; } }
+  .main-slider-content p {
+    font-size: 12px;
+    line-height: 24px; }
+    @media screen and (min-width: 768px) {
+      .main-slider-content p {
+        font-size: 18px;
+        padding-bottom: 20px; } }
+    @media screen and (min-width: 992px) {
+      .main-slider-content p {
+        font-size: 18px; } }
+  .main-slider-content a {
+    position: relative;
+    color: white;
+    border: white 1px solid;
+    padding: 12px 30px; }
 
 body {
   font-size: 13px;
