--- a/css/styles.scss
+++ b/css/styles.scss
@@ -64,6 +64,10 @@ $total-width: 100%;
 	};
 }
 
+body {
+	padding-top: 50px;
+}
+
 .container {
 	max-width: 1200px;
 	margin: 0 auto;
@@ -106,7 +110,7 @@ h1, h2, h3 {
 }
 
 header {
-	z-index: 1000;
+	z-index: 10000;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -125,6 +129,9 @@ header {
 	position: relative;
 	z-index: 2;
 	top: 8px;
+	left: -20px;
+	
+
 }
 
 .nav-logo img {
@@ -191,7 +198,8 @@ float: none;
 		background-image: url('../img/slider_1.jpg');
 		background-size: cover;
 		background-repeat: no-repeat;
-		background-position: 0 0;	
+		background-position: 0 0;
+		
 	};
 	.main-slide-2 {
 		background-image: url('../img/slider_2.jpg');
@@ -206,3 +214,56 @@ float: none;
 		background-position: 0 0;
 	};
 }
+
+.main-slider-content {
+	padding: 10% 2% 5% 2%;
+	color: $bright-text-colour;
+	position: relative;
+	z-index: 1;
+	
+	img {
+		top: 5%;
+		position: absolute;
+			@media screen and (min-width: $tablet) {
+				right: 5%;
+			}
+	} 
+
+	h1 {
+		margin-top: 250px; 
+		font-size: 20px;
+		line-height: 30px;
+		font-weight: 400;
+		@media screen and (min-width: $phone) {
+			color: red;
+			margin-top: 280px; 
+			font-size: 30px;
+		}
+		@media screen and (min-width: $tablet) {	
+			font-size: 40px;
+			line-height: 60px;
+			color: green;
+		}
+	}
+
+	p {
+		font-size: 12px;
+		line-height: 24px;
+		@media screen and (min-width: $phone) {
+			font-size: 18px;
+			padding-bottom: 20px;
+		}
+		@media screen and (min-width: $tablet) {
+			font-size: 18px;
+		}
+	}
+	a {
+		position: relative;
+		color: white;
+		border: white 1px solid;
+		padding: 12px 30px
+	}
+}
+
+
+
