--- a/css/styles.scss
+++ b/css/styles.scss
@@ -265,5 +265,33 @@ float: none;
 	}
 }
 
-
+// Services
+.our-services {
+	padding: 80px 0 60px 0;
+	overflow: auto;
+	.single-col {
+		margin-bottom: 30px;
+		span {
+			display: inline-block;
+			@include size(90px, 90px);
+			background-color: $alternate-background;
+			text-align: center;
+			@include border-radius-single(50%);
+			margin-bottom: 30px;
+			@include basic-transition;
+			&:hover {
+				background-color: $accent-colour;
+			}
+			&:hover > i {
+				color: white;
+			}
+			i {
+				color: $accent-colour;
+				font-size: 30px;
+				line-height: 90px;
+				@include basic-transition;
+			}
+		}
+	}
+}
 
