--- a/css/helpers.scss
+++ b/css/helpers.scss
@@ -45,6 +45,14 @@ $desktop: 1200px;
 	display: inline-block;
 }
 
+@mixin absolute-one-hundred-size {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
 @mixin block {
 	display: block;
 }
