--- a/css/main.css
+++ b/css/main.css
@@ -394,6 +394,76 @@ a {
         line-height: 90px;
         transition: all 0.5s ease-in-out; }
 
+.portfolio {
+  background-color: #FFF4F2;
+  padding: 55px 0; }
+  .portfolio .owl-controls {
+    margin-top: 60px; }
+
+.portfolio-item {
+  width: 100%; }
+  .portfolio-item img {
+    width: 100%;
+    cursor: move; }
+
+.portfolio-hover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s ease-in-out;
+  text-align: center;
+  overflow: hidden;
+  background-color: rgba(69, 182, 175, 0.7);
+  opacity: 0; }
+
+.portfolio-hover-inner {
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  transform: translateY(-50%); }
+  .portfolio-hover-inner h3 {
+    font-size: 18px;
+    margin: 0 0 6px 0;
+    color: white;
+    font-weight: 400;
+    transform: translateX(0%);
+    transform: translateY(-400%);
+    transform: translateZ(0%);
+    transition: all 0.6s ease-in-out; }
+  .portfolio-hover-inner p {
+    color: white;
+    margin-bottom: 20px;
+    transform: translateX(0%);
+    transform: translateY(-400%);
+    transform: translateZ(0%);
+    transition: all 0.6s ease-in-out; }
+  .portfolio-hover-inner a {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border: 1px solid white;
+    text-align: center;
+    margin: 0 5px;
+    transform: translateX(0%);
+    transform: translateY(400%);
+    transform: translateZ(0%);
+    transition: all 0.6s ease-in-out;
+    transition: all 0.5s ease-in-out; }
+    .portfolio-hover-inner a i {
+      line-height: 40px;
+      font-size: 14px;
+      color: white;
+      transition: all 0.5s ease-in-out; }
+  .portfolio-hover-inner a.portfolio-link-left {
+    transition: all 0.4s ease-in-out; }
+  .portfolio-hover-inner a.portfolio-link-right {
+    transition: all 0.6s ease-in-out; }
+
 body {
   font-size: 13px;
   font-family: "Open Sans", sans-serif;
