--- a/css/styles.scss
+++ b/css/styles.scss
@@ -311,11 +311,23 @@ float: none;
 		width: 100%;
 		cursor: move;
 	}
+	&:hover .portfolio-hover {
+		opacity: 1;
+	}
+	&:hover h3 {
+		@include translate3d(0%, 0%, 0%);
+	}
+	&:hover p {
+		@include translate3d(0%, 0%, 0%);
+	}
+	&:hover a {
+		@include translate3d(0%, 0%, 0%);
+	}
 }
 
 .portfolio-hover {
 	@include absolute-one-hundred-size;
-	@include basic-transition;
+	@include var-transition(0.6s);
 	text-align: center;
 	overflow: hidden;
 	background-color: $accent-colour-faded;
@@ -325,14 +337,13 @@ float: none;
 .portfolio-hover-inner {
 	position: absolute;
 	width: 100%;
-	height: 50%;
-	transform: translateY(-50%);
+	top: 50%;
+	@include translate3d(0%, -50%, 0%);
 	h3 {
 		font-size: 18px;
 		margin: 0 0 6px 0;
 		color: white;
 		font-weight: 400;
-		@include translate3d(0%, -400%, 0%);
 		@include var-transition(0.6s);
 	}
 	p {
@@ -350,12 +361,17 @@ float: none;
 		margin: 0 5px;
 		@include translate3d(0%, 400%, 0%);
 		@include var-transition(0.6s);
-		@include basic-transition;
 		i{
 			line-height: 40px;
 			font-size: 14px;
 			color: white;
-			@include basic-transition;
+			@include var-transition(0.6s);
+		}
+		&:hover {
+			background-color: white;
+		}
+		&:hover i {
+			color: $accent-colour;
 		}
 	}
 	a.portfolio-link-left {
