--- a/css/helpers.scss
+++ b/css/helpers.scss
@@ -37,6 +37,14 @@ $desktop: 1200px;
 	transform: translateY(-50);
 }
 
+@mixin clerfix {
+	&:after {
+		content: "";
+		display: table;
+		clear: both;
+	}
+}
+
 .invivsible {
 	display: none;
 }
