--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,303 @@ clear: both;
 }
 
 */
+body {
+  width: 100%;
+  *zoom: 1; }
+  body:before, body:after {
+    content: "";
+    display: table; }
+  body:after {
+    clear: both; }
+
+/**
+ * Global Reset of all HTML Elements
+ *
+ * Resetting all of our HTML Elements ensures a smoother
+ * visual transition between browsers. If you don't believe me,
+ * try temporarily commenting out this block of code, then go
+ * and look at Mozilla versus Safari, both good browsers with
+ * a good implementation of CSS. The thing is, all browser CSS
+ * defaults are different and at the end of the day if visual
+ * consistency is what we're shooting for, then we need to
+ * make sure we're resetting all spacing elements.
+ *
+ */
+html, body {
+  border: 0;
+  font-family: "Helvetica-Neue", "Helvetica", Arial, sans-serif;
+  line-height: 1.5;
+  margin: 0;
+  padding: 0; }
+
+div, span, object, iframe, img, table, caption, thead, tbody,
+tfoot, tr, tr, td, article, aside, canvas, details, figure, hgroup, menu,
+nav, footer, header, section, summary, mark, audio, video {
+  border: 0;
+  margin: 0;
+  padding: 0; }
+
+h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, address, cit, code,
+del, dfn, em, ins, q, samp, small, strong, sub, sup, b, i, hr, dl, dt, dd,
+ol, ul, li, fieldset, legend, label {
+  border: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  margin: 0;
+  padding: 0; }
+
+article, aside, canvas, figure, figure img, figcaption, hgroup,
+footer, header, nav, section, audio, video {
+  display: block; }
+
+table {
+  border-collapse: separate;
+  border-spacing: 0; }
+  table caption, table th, table td {
+    text-align: left;
+    vertical-align: middle; }
+
+a img {
+  border: 0; }
+
+:focus {
+  outline: 0; }
+
+.center-text {
+  text-align: center; }
+
+.float-left {
+  float: left; }
+
+.float-right {
+  float: right; }
+
+.float-none {
+  float: none; }
+
+.center-no-float {
+  float: none;
+  text-align: center; }
+
+.no-center-float {
+  float: left;
+  text-align: initial; }
+
+.center-vertical {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50); }
+
+.invivsible {
+  display: none; }
+
+.inline-block {
+  display: inline-block; }
+
+.overflow-fix {
+  overflow: auto; }
+
+/*
+
+content: "";
+display: table;
+clear: both;
+*/
+.hide {
+  opacity: 0; }
+
+.show {
+  opacity: 1; }
+
+/*
+@mixin my-size($width, $height) {
+  width: $width;
+  width: $height;
+}
+
+*/
+body {
+  font-size: 13px;
+  font-family: "Open Sans", sans-serif;
+  color: #888; }
+
+p {
+  margin: 0 0 15px 0;
+  line-height: 24px; }
+
+h2 {
+  font-size: 24px;
+  margin: 0 0 12px 0;
+  color: #434343;
+  font-weight: 400; }
+
+h3 {
+  font-size: 18px;
+  margin: 0 0 18px 0;
+  color: #434343;
+  font-weight: 400; }
+
+/*
+    Mobile Menu Core Style
+*/
+.slicknav_btn {
+  position: relative;
+  display: block;
+  vertical-align: middle;
+  float: right;
+  padding: 0.438em 0.625em 0.438em 0.625em;
+  line-height: 1.125em;
+  cursor: pointer; }
+
+.slicknav_menu .slicknav_menutxt {
+  display: block;
+  line-height: 1.188em;
+  float: left; }
+
+.slicknav_menu .slicknav_icon {
+  float: left;
+  margin: 0.188em 0 0 0.438em; }
+
+.slicknav_menu .slicknav_no-text {
+  margin: 0; }
+
+.slicknav_menu .slicknav_icon-bar {
+  display: block;
+  width: 1.125em;
+  height: 0.125em;
+  -webkit-border-radius: 1px;
+  -moz-border-radius: 1px;
+  border-radius: 1px;
+  -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25); }
+
+.slicknav_btn .slicknav_icon-bar + .slicknav_icon-bar {
+  margin-top: 0.188em; }
+
+.slicknav_nav {
+  clear: both; }
+
+.slicknav_nav ul,
+.slicknav_nav li {
+  display: block; }
+
+.slicknav_nav .slicknav_arrow {
+  font-size: 0.8em;
+  margin: 0 0 0 0.4em; }
+
+.slicknav_nav .slicknav_item {
+  cursor: pointer; }
+
+.slicknav_nav .slicknav_row {
+  display: block; }
+
+.slicknav_nav a {
+  display: block; }
+
+.slicknav_nav .slicknav_item a,
+.slicknav_nav .slicknav_parent-link a {
+  display: inline; }
+
+.slicknav_menu:before,
+.slicknav_menu:after {
+  content: " ";
+  display: table; }
+
+.slicknav_menu:after {
+  clear: both; }
+
+/* IE6/7 support */
+.slicknav_menu {
+  *zoom: 1; }
+
+/* 
+    User Default Style
+    Change the following styles to modify the appearance of the menu.
+*/
+.slicknav_menu {
+  font-size: 16px; }
+
+/* Button */
+.slicknav_btn {
+  margin: 8px 15px 8px;
+  padding: 10px;
+  text-decoration: none;
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  border: 1px solid red;
+  background-color: #FFF; }
+
+.slicknav_btn:hover {
+  background-color: #DDD; }
+
+.slicknav_btn:focus {
+  background-color: #DDD; }
+
+/* Button Text */
+.slicknav_menu .slicknav_menutxt {
+  color: #FFF;
+  font-weight: bold;
+  text-shadow: 0 1px 3px #000; }
+
+/* Button Lines */
+.slicknav_menu .slicknav_icon-bar {
+  background-color: red; }
+
+.slicknav_menu {
+  background: #FFF;
+  padding: 5px; }
+
+.slicknav_nav {
+  color: #fff;
+  margin: 0;
+  padding: 0;
+  font-size: 0.875em; }
+
+.slicknav_nav, .slicknav_nav ul {
+  list-style: none;
+  overflow: hidden;
+  padding-left: 15px; }
+
+.slicknav_nav ul {
+  padding: 0;
+  margin: 0 0 0 20px; }
+
+.slicknav_nav .slicknav_row {
+  padding: 5px 10px;
+  margin: 2px 5px; }
+
+.slicknav_nav a {
+  font-size: 13px;
+  padding: 5px 10px;
+  text-decoration: none;
+  color: #888;
+  transition: all 0.2s ease-in-out; }
+
+.slicknav_nav .slicknav_item a,
+.slicknav_nav .slicknav_parent-link a {
+  padding: 0;
+  margin: 0; }
+
+.slicknav_nav .slicknav_row:hover {
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  background: #ccc;
+  color: #fff; }
+
+.slicknav_nav a:hover {
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  background: #45B6AF;
+  color: #222; }
+
+.slicknav_nav .slicknav_txtnode {
+  margin-left: 15px; }
+
 .our-services .single-col {
   display: inline;
   float: left;
@@ -461,24 +758,183 @@ a {
     -webkit-border-radius: 50%;
     border: 1px solid white;
     text-align: center;
-    margin: 0 5px;
     transform: translateX(0%);
     transform: translateY(400%);
     transform: translateZ(0%);
     transition: all 0.6s ease-in-out; }
-    .portfolio-hover-inner a i {
-      line-height: 40px;
-      font-size: 14px;
-      color: white;
-      transition: all 0.6s ease-in-out; }
     .portfolio-hover-inner a:hover {
       background-color: white; }
-    .portfolio-hover-inner a:hover i {
-      color: #45B6AF; }
   .portfolio-hover-inner a.portfolio-link-left {
     transition: all 0.4s ease-in-out; }
+    .portfolio-hover-inner a.portfolio-link-left i {
+      color: white;
+      transition: all 0.6s ease-in-out;
+      line-height: 40px; }
+    .portfolio-hover-inner a.portfolio-link-left:hover i {
+      color: #45B6AF; }
   .portfolio-hover-inner a.portfolio-link-right {
     transition: all 0.6s ease-in-out; }
+    .portfolio-hover-inner a.portfolio-link-right i {
+      color: white;
+      transition: all 0.6s ease-in-out; }
+    .portfolio-hover-inner a.portfolio-link-right:hover i {
+      color: #45B6AF; }
+
+.section-video {
+  display: none;
+  position: relative; }
+  .section-video .container {
+    padding: 175px 0;
+    z-index: 5; }
+  @media screen and (min-width: 768px) {
+    .section-video {
+      display: block; } }
+
+#movie {
+  width: 100%;
+  height: 100%;
+  content: "";
+  z-index: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: none repeat 0 0 rgba(30, 30, 30, 0.5); }
+
+.video-line {
+  text-align: center; }
+  .video-line h2 {
+    font-size: 48px;
+    margin-bottom: 26px;
+    color: white;
+    position: relative; }
+  .video-line a {
+    position: relative;
+    color: white;
+    background-color: #45B6AF;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 24px;
+    text-transform: uppercase;
+    margin: 8px 0;
+    padding: 12px 30px;
+    transition: all 0.2s ease-in-out; }
+    .video-line a:hover {
+      opacity: 0.7; }
+
+.section-video-text {
+  background-color: #45B6AF;
+  padding: 50px 0;
+  text-align: center; }
+  .section-video-text h2 {
+    color: white; }
+    .section-video-text h2 a {
+      color: white;
+      background-color: #45B6AF;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 13px;
+      font-weight: 400;
+      line-height: 24px;
+      text-transform: uppercase;
+      border: solid white 1px;
+      margin: 8px 0 8px 65px;
+      padding: 10px 30px;
+      transition: all 0.2s ease-in-out; }
+      .section-video-text h2 a:hover {
+        color: #45B6AF;
+        background-color: white;
+        transition: all 0.2s ease-in-out; }
+
+.advantages {
+  padding: 80px 0 0 20px; }
+  .advantages:after {
+    content: "";
+    display: table;
+    clear: both; }
+  .advantages .single-col {
+    text-align: center;
+    margin-bottom: 30px; }
+    .advantages .single-col span {
+      display: block;
+      float: none;
+      margin: 20px 0 20px 0; }
+      .advantages .single-col span i {
+        font-size: 30px;
+        color: #45B6AF; }
+      @media screen and (min-width: 768px) {
+        .advantages .single-col span {
+          display: inline-block;
+          float: left;
+          text-align: initial; } }
+    .advantages .single-col .services-content {
+      margin-left: 0px; }
+      @media screen and (min-width: 768px) {
+        .advantages .single-col .services-content {
+          margin-left: 80px; } }
+    @media screen and (min-width: 768px) {
+      .advantages .single-col {
+        text-align: left; } }
+
+.statistics {
+  background-color: #EEE;
+  overflow: auto;
+  padding: 80px 0 60px 0; }
+  .statistics .single-col {
+    text-align: center; }
+    .statistics .single-col .statistics-content {
+      margin-bottom: 30px; }
+      .statistics .single-col .statistics-content h3 {
+        font-size: 60px;
+        color: #45B6AF;
+        margin: 0; }
+      .statistics .single-col .statistics-content p {
+        font-size: 14px; }
+
+.photo-banner {
+  text-align: center;
+  background: url("../img/paralel.jpg") no-repeat center center fixed; }
+  .photo-banner .photo-banner-inner {
+    position: relative;
+    z-index: 0; }
+    .photo-banner .photo-banner-inner:after {
+      content: "";
+      z-index: 0;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: none repeat 0 0 rgba(30, 30, 30, 0.5); }
+    .photo-banner .photo-banner-inner .container {
+      position: relative;
+      z-index: 1;
+      padding: 175px; }
+    .photo-banner .photo-banner-inner h2 {
+      font-size: 48px;
+      margin: 0 0 26px 0;
+      color: #434343;
+      font-weight: 400;
+      color: white; }
+    .photo-banner .photo-banner-inner a {
+      position: relative;
+      color: white;
+      background-color: #45B6AF;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 13px;
+      font-weight: 400;
+      line-height: 24px;
+      text-transform: uppercase;
+      margin: 8px 0;
+      padding: 12px 30px;
+      transition: all 0.2s ease-in-out; }
+      .photo-banner .photo-banner-inner a:hover {
+        opacity: 0.7;
+        transition: all 0.2s ease-in-out; }
 
 body {
   font-size: 13px;
