Styled with Tesla colours

--- a/css/colors.scss
+++ b/css/colors.scss
@@ -5,7 +5,8 @@ $bright-text-colour: #D4D4D4;
 $brightest-text-colour: #FFF;
 $menu-link-colour: #3A3C43;
 
-$accent-colour: #45B6AF;
+$accent-colour: #E51837;
+$accent-colour-pale: #F5D4D9;
 $accent-colour-faded: transparentize($accent-colour, 0.3);
 
 $basic-border-colour: #DDD;
