--- a/css/typography.scss
+++ b/css/typography.scss
@@ -1,8 +1,9 @@
-$basic-font-size: 13px;
+$basic-font-size: 20px;
 $basic-line-height: 24px;
 $paragraph-margin: 0 0 15px 0;
 
-$font-primary: 'Open Sans', sans-serif;
+
+$font-primary: 'Economica', sans-serif;
 $font-secondary: 'Lato', sans-serif;
 
 
