--- a/css/main.css
+++ b/css/main.css
@@ -229,8 +229,8 @@ clear: both;
 
 */
 body {
-  font-size: 13px;
-  font-family: "Open Sans", sans-serif;
+  font-size: 20px;
+  font-family: "Economica", sans-serif;
   color: #888; }
 
 p {
@@ -382,7 +382,7 @@ h3 {
   margin: 2px 5px; }
 
 .slicknav_nav a {
-  font-size: 13px;
+  font-size: 20px;
   padding: 5px 10px;
   text-decoration: none;
   color: #888;
@@ -404,7 +404,7 @@ h3 {
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
-  background: #45B6AF;
+  background: #E51837;
   color: #222; }
 
 .slicknav_nav .slicknav_txtnode {
@@ -473,19 +473,19 @@ h3 {
 .our-team .single-col {
   display: inline;
   float: left;
-  width: 97.36842%;
+  width: 47.36842%;
   margin: 0 1.31579%; }
   @media screen and (min-width: 992px) {
     .our-team .single-col {
       display: inline;
       float: left;
-      width: 30.70175%;
+      width: 22.36842%;
       margin: 0 1.31579%; } }
   @media screen and (min-width: 1200px) {
     .our-team .single-col {
       display: inline;
       float: left;
-      width: 30.70175%;
+      width: 22.36842%;
       margin: 0 1.31579%; } }
 
 .footer-main .single-col {
@@ -577,14 +577,14 @@ li {
 
 a {
   color: #3A3C43;
-  font-size: 15px;
-  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+  font-family: "Economica", sans-serif;
   font-weight: 400;
   padding: 20px 14px;
   line-height: 20px;
   transition: all 0.2s ease-in-out; }
   a:hover {
-    color: #45B6AF; }
+    color: #E51837; }
 
 #main-menu {
   display: none; }
@@ -609,7 +609,7 @@ a {
   background-repeat: no-repeat;
   background-position: 0 0; }
 .bxslider .main-slide-2 {
-  background-image: url("../img/slider_2.jpg");
+  background-image: url("../img/slider_2-test.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 0 0; }
@@ -634,27 +634,29 @@ a {
     margin-top: 250px;
     font-size: 20px;
     line-height: 30px;
-    font-weight: 400; }
+    font-weight: 700; }
     @media screen and (min-width: 768px) {
       .main-slider-content h1 {
-        color: red;
+        color: #E51837;
         margin-top: 280px;
         font-size: 30px; } }
     @media screen and (min-width: 992px) {
       .main-slider-content h1 {
         font-size: 40px;
         line-height: 60px;
-        color: green; } }
+        color: #E51837; } }
   .main-slider-content p {
     font-size: 12px;
     line-height: 24px; }
     @media screen and (min-width: 768px) {
       .main-slider-content p {
-        font-size: 18px;
+        font-size: 25px;
         padding-bottom: 20px; } }
     @media screen and (min-width: 992px) {
       .main-slider-content p {
-        font-size: 18px; } }
+        font-size: 25px;
+        line-height: 30px;
+        color: #F5D4D9; } }
   .main-slider-content a {
     position: relative;
     color: white;
@@ -679,14 +681,19 @@ a {
       margin-bottom: 30px;
       transition: all 0.2s ease-in-out; }
       .our-services .single-col span:hover {
-        background-color: #45B6AF; }
+        background-color: #E51837; }
       .our-services .single-col span:hover > i {
         color: white; }
       .our-services .single-col span i {
-        color: #45B6AF;
+        color: #E51837;
         font-size: 30px;
         line-height: 90px;
         transition: all 0.2s ease-in-out; }
+    .our-services .single-col h3 {
+      color: #E51837;
+      font-weight: 700; }
+    .our-services .single-col p {
+      font-size: 16px; }
 
 .portfolio {
   background-color: #FFF4F2;
@@ -723,7 +730,7 @@ a {
   transition: all 0.6s ease-in-out;
   text-align: center;
   overflow: hidden;
-  background-color: rgba(69, 182, 175, 0.7);
+  background-color: rgba(229, 24, 55, 0.7);
   opacity: 0; }
 
 .portfolio-hover-inner {
@@ -767,14 +774,14 @@ a {
       color: white;
       transition: all 0.6s ease-in-out; }
     .portfolio-hover-inner a.portfolio-link-left:hover i {
-      color: #45B6AF; }
+      color: #E51837; }
   .portfolio-hover-inner a.portfolio-link-right {
     transition: all 0.6s ease-in-out; }
     .portfolio-hover-inner a.portfolio-link-right i {
       color: white;
       transition: all 0.6s ease-in-out; }
     .portfolio-hover-inner a.portfolio-link-right:hover i {
-      color: #45B6AF; }
+      color: #E51837; }
 
 .section-video {
   display: none;
@@ -808,10 +815,10 @@ a {
   .video-line a {
     position: relative;
     color: white;
-    background-color: #45B6AF;
+    background-color: #E51837;
     text-decoration: none;
     display: inline-block;
-    font-size: 13px;
+    font-size: 20px;
     font-weight: 400;
     line-height: 24px;
     text-transform: uppercase;
@@ -822,17 +829,17 @@ a {
       opacity: 0.7; }
 
 .section-video-text {
-  background-color: #45B6AF;
+  background-color: #E51837;
   padding: 50px 0;
   text-align: center; }
   .section-video-text h2 {
     color: white; }
     .section-video-text h2 a {
       color: white;
-      background-color: #45B6AF;
+      background-color: #E51837;
       text-decoration: none;
       display: inline-block;
-      font-size: 13px;
+      font-size: 20px;
       font-weight: 400;
       line-height: 24px;
       text-transform: uppercase;
@@ -841,7 +848,7 @@ a {
       padding: 10px 30px;
       transition: all 0.2s ease-in-out; }
       .section-video-text h2 a:hover {
-        color: #45B6AF;
+        color: #E51837;
         background-color: white;
         transition: all 0.2s ease-in-out; }
 
@@ -860,7 +867,7 @@ a {
       margin: 20px 0 20px 0; }
       .advantages .single-col span i {
         font-size: 30px;
-        color: #45B6AF; }
+        color: #E51837; }
       @media screen and (min-width: 768px) {
         .advantages .single-col span {
           display: inline-block;
@@ -885,14 +892,14 @@ a {
       margin-bottom: 30px; }
       .statistics .single-col .statistics-content h3 {
         font-size: 60px;
-        color: #45B6AF;
+        color: #E51837;
         margin: 0; }
       .statistics .single-col .statistics-content p {
         font-size: 14px; }
 
 .photo-banner {
   text-align: center;
-  background: url("../img/paralel.jpg") no-repeat center center fixed; }
+  background: url("../img/paralel.png") no-repeat center center fixed; }
   .photo-banner .photo-banner-inner {
     position: relative;
     z-index: 0; }
@@ -918,10 +925,10 @@ a {
     .photo-banner .photo-banner-inner a {
       position: relative;
       color: white;
-      background-color: #45B6AF;
+      background-color: #E51837;
       text-decoration: none;
       display: inline-block;
-      font-size: 13px;
+      font-size: 20px;
       font-weight: 400;
       line-height: 24px;
       text-transform: uppercase;
@@ -938,6 +945,10 @@ a {
   overflow: auto; }
   .our-team .single-col {
     margin-bottom: 30px; }
+  .our-team h2 {
+    color: #E51837;
+    font-weight: 700;
+    font-size: 30px; }
 
 .team-members {
   overflow: auto;
@@ -947,7 +958,7 @@ a {
   margin-bottom: 30px;
   width: 100%; }
 .team-member h3 {
-  font-size: 18px;
+  font-size: 24px;
   margin: 0 0 4px 0;
   color: #434343;
   font-weight: 400; }
@@ -966,7 +977,7 @@ a {
     color: #595655;
     transition: all 0.2s ease-in-out; }
     .members-social li i:hover {
-      color: #45B6AF;
+      color: #E51837;
       transition: all 0.2s ease-in-out; }
 
 footer {
@@ -1067,8 +1078,8 @@ footer {
       color: #D4D4D4; }
 
 body {
-  font-size: 13px;
-  font-family: "Open Sans", sans-serif;
+  font-size: 20px;
+  font-family: "Economica", sans-serif;
   color: #888; }
 
 p {
@@ -1220,7 +1231,7 @@ h3 {
   margin: 2px 5px; }
 
 .slicknav_nav a {
-  font-size: 13px;
+  font-size: 20px;
   padding: 5px 10px;
   text-decoration: none;
   color: #888;
@@ -1242,7 +1253,7 @@ h3 {
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
-  background: #45B6AF;
+  background: #E51837;
   color: #222; }
 
 .slicknav_nav .slicknav_txtnode {
