--- a/css/styles.css
+++ b/css/styles.css
@@ -114,8 +114,8 @@ clear: both;
 
 */
 body {
-  font-size: 13px;
-  font-family: "Open Sans", sans-serif;
+  font-size: 20px;
+  font-family: "Economica", sans-serif;
   color: #888; }
 
 p {
@@ -267,7 +267,7 @@ h3 {
   margin: 2px 5px; }
 
 .slicknav_nav a {
-  font-size: 13px;
+  font-size: 20px;
   padding: 5px 10px;
   text-decoration: none;
   color: #888;
@@ -289,7 +289,7 @@ h3 {
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
-  background: #45B6AF;
+  background: #E51837;
   color: #222; }
 
 .slicknav_nav .slicknav_txtnode {
@@ -462,14 +462,14 @@ li {
 
 a {
   color: #3A3C43;
-  font-size: 15px;
-  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+  font-family: "Economica", sans-serif;
   font-weight: 400;
   padding: 20px 14px;
   line-height: 20px;
   transition: all 0.2s ease-in-out; }
   a:hover {
-    color: #45B6AF; }
+    color: #E51837; }
 
 #main-menu {
   display: none; }
@@ -494,7 +494,7 @@ a {
   background-repeat: no-repeat;
   background-position: 0 0; }
 .bxslider .main-slide-2 {
-  background-image: url("../img/slider_2.jpg");
+  background-image: url("../img/slider_2-test.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 0 0; }
@@ -519,27 +519,29 @@ a {
     margin-top: 250px;
     font-size: 20px;
     line-height: 30px;
-    font-weight: 400; }
+    font-weight: 700; }
     @media screen and (min-width: 768px) {
       .main-slider-content h1 {
-        color: red;
+        color: #E51837;
         margin-top: 280px;
         font-size: 30px; } }
     @media screen and (min-width: 992px) {
       .main-slider-content h1 {
         font-size: 40px;
         line-height: 60px;
-        color: green; } }
+        color: #E51837; } }
   .main-slider-content p {
     font-size: 12px;
     line-height: 24px; }
     @media screen and (min-width: 768px) {
       .main-slider-content p {
-        font-size: 18px;
+        font-size: 25px;
         padding-bottom: 20px; } }
     @media screen and (min-width: 992px) {
       .main-slider-content p {
-        font-size: 18px; } }
+        font-size: 25px;
+        line-height: 30px;
+        color: #F5D4D9; } }
   .main-slider-content a {
     position: relative;
     color: white;
@@ -550,7 +552,8 @@ a {
   padding: 80px 0 60px 0;
   overflow: auto; }
   .our-services .single-col {
-    margin-bottom: 30px; }
+    margin-bottom: 30px;
+    text-align: center; }
     .our-services .single-col span {
       display: inline-block;
       width: 90px;
@@ -563,14 +566,19 @@ a {
       margin-bottom: 30px;
       transition: all 0.2s ease-in-out; }
       .our-services .single-col span:hover {
-        background-color: #45B6AF; }
+        background-color: #E51837; }
       .our-services .single-col span:hover > i {
         color: white; }
       .our-services .single-col span i {
-        color: #45B6AF;
+        color: #E51837;
         font-size: 30px;
         line-height: 90px;
         transition: all 0.2s ease-in-out; }
+    .our-services .single-col h3 {
+      color: #E51837;
+      font-weight: 700; }
+    .our-services .single-col p {
+      font-size: 16px; }
 
 .portfolio {
   background-color: #FFF4F2;
@@ -607,7 +615,7 @@ a {
   transition: all 0.6s ease-in-out;
   text-align: center;
   overflow: hidden;
-  background-color: rgba(69, 182, 175, 0.7);
+  background-color: rgba(229, 24, 55, 0.7);
   opacity: 0; }
 
 .portfolio-hover-inner {
@@ -651,14 +659,14 @@ a {
       color: white;
       transition: all 0.6s ease-in-out; }
     .portfolio-hover-inner a.portfolio-link-left:hover i {
-      color: #45B6AF; }
+      color: #E51837; }
   .portfolio-hover-inner a.portfolio-link-right {
     transition: all 0.6s ease-in-out; }
     .portfolio-hover-inner a.portfolio-link-right i {
       color: white;
       transition: all 0.6s ease-in-out; }
     .portfolio-hover-inner a.portfolio-link-right:hover i {
-      color: #45B6AF; }
+      color: #E51837; }
 
 .section-video {
   display: none;
@@ -692,10 +700,10 @@ a {
   .video-line a {
     position: relative;
     color: white;
-    background-color: #45B6AF;
+    background-color: #E51837;
     text-decoration: none;
     display: inline-block;
-    font-size: 13px;
+    font-size: 20px;
     font-weight: 400;
     line-height: 24px;
     text-transform: uppercase;
@@ -706,17 +714,17 @@ a {
       opacity: 0.7; }
 
 .section-video-text {
-  background-color: #45B6AF;
+  background-color: #E51837;
   padding: 50px 0;
   text-align: center; }
   .section-video-text h2 {
     color: white; }
     .section-video-text h2 a {
       color: white;
-      background-color: #45B6AF;
+      background-color: #E51837;
       text-decoration: none;
       display: inline-block;
-      font-size: 13px;
+      font-size: 20px;
       font-weight: 400;
       line-height: 24px;
       text-transform: uppercase;
@@ -725,7 +733,7 @@ a {
       padding: 10px 30px;
       transition: all 0.2s ease-in-out; }
       .section-video-text h2 a:hover {
-        color: #45B6AF;
+        color: #E51837;
         background-color: white;
         transition: all 0.2s ease-in-out; }
 
@@ -744,7 +752,7 @@ a {
       margin: 20px 0 20px 0; }
       .advantages .single-col span i {
         font-size: 30px;
-        color: #45B6AF; }
+        color: #E51837; }
       @media screen and (min-width: 768px) {
         .advantages .single-col span {
           display: inline-block;
@@ -769,14 +777,14 @@ a {
       margin-bottom: 30px; }
       .statistics .single-col .statistics-content h3 {
         font-size: 60px;
-        color: #45B6AF;
+        color: #E51837;
         margin: 0; }
       .statistics .single-col .statistics-content p {
         font-size: 14px; }
 
 .photo-banner {
   text-align: center;
-  background: url("../img/paralel.jpg") no-repeat center center fixed; }
+  background: url("../img/paralel.png") no-repeat center center fixed; }
   .photo-banner .photo-banner-inner {
     position: relative;
     z-index: 0; }
@@ -802,10 +810,10 @@ a {
     .photo-banner .photo-banner-inner a {
       position: relative;
       color: white;
-      background-color: #45B6AF;
+      background-color: #E51837;
       text-decoration: none;
       display: inline-block;
-      font-size: 13px;
+      font-size: 20px;
       font-weight: 400;
       line-height: 24px;
       text-transform: uppercase;
@@ -822,6 +830,10 @@ a {
   overflow: auto; }
   .our-team .single-col {
     margin-bottom: 30px; }
+  .our-team h2 {
+    color: #E51837;
+    font-weight: 700;
+    font-size: 30px; }
 
 .team-members {
   overflow: auto;
@@ -850,7 +862,7 @@ a {
     color: #595655;
     transition: all 0.2s ease-in-out; }
     .members-social li i:hover {
-      color: #45B6AF;
+      color: #E51837;
       transition: all 0.2s ease-in-out; }
 
 footer {
